# robocon

./: .gitignore  README.md  et --hard 8ad05d1
src/robocon_application/: package.xml  setup.cfg  setup.py
src/robocon_application/config/: localization.yaml
src/robocon_application/robocon_application/: InverseKinematics.py  Localization_node.py  Maping.py  ObjectDetection.py  Planner_node.py  car_controller.py  cheetah_controller.py  cheetah_teleop.py  dual_teleop.py  joint_publisher_node.py  r1_teleop.py  r2_teleop.py  robot_logic_node.py
src/robocon_bringup/: CMakeLists.txt  package.xml
src/robocon_bringup/config/: ros_gz_bridge.yaml  rrr.rviz
src/robocon_bringup/launch/: rrr_robot_display.launch.py  sim.launch.py
src/robocon_description/: CMakeLists.txt  package.xml
src/robocon_description/fake/fake_page_10_0_0_255_texture/: model.config  model_fake_page_10_0_0_255_texture.sdf
src/robocon_description/fake/fake_page_10_255_0_0_texture/: model.config  model_fake_page_10_255_0_0_texture.sdf
src/robocon_description/fake/fake_page_11_0_0_255_texture/: model.config  model_fake_page_11_0_0_255_texture.sdf
src/robocon_description/fake/fake_page_11_255_0_0_texture/: model.config  model_fake_page_11_255_0_0_texture.sdf
src/robocon_description/fake/fake_page_12_0_0_255_texture/: model.config  model_fake_page_12_0_0_255_texture.sdf
src/robocon_description/fake/fake_page_12_255_0_0_texture/: model.config  model_fake_page_12_255_0_0_texture.sdf
src/robocon_description/fake/fake_page_13_0_0_255_texture/: model.config  model_fake_page_13_0_0_255_texture.sdf
src/robocon_description/fake/fake_page_13_255_0_0_texture/: model.config  model_fake_page_13_255_0_0_texture.sdf
src/robocon_description/fake/fake_page_14_0_0_255_texture/: model.config  model_fake_page_14_0_0_255_texture.sdf
src/robocon_description/fake/fake_page_14_255_0_0_texture/: model.config  model_fake_page_14_255_0_0_texture.sdf
src/robocon_description/fake/fake_page_15_0_0_255_texture/: model.config  model_fake_page_15_0_0_255_texture.sdf
src/robocon_description/fake/fake_page_15_255_0_0_texture/: model.config  model_fake_page_15_255_0_0_texture.sdf
src/robocon_description/fake/fake_page_16_0_0_255_texture/: model.config  model_fake_page_16_0_0_255_texture.sdf
src/robocon_description/fake/fake_page_16_255_0_0_texture/: model.config  model_fake_page_16_255_0_0_texture.sdf
src/robocon_description/fake/fake_page_2_0_0_255_texture/: model.config  model_fake_page_2_0_0_255_texture.sdf
src/robocon_description/fake_page_2_255_0_0_texture/: model_fake_page_2_255_0_0_texture.sdf
src/robocon_description/hooks/: robocon_description.dsv.in
src/robocon_description/models/Palm_tip/: Palm.dae
(+124 files in other folders)
