<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocon_bringup</name>
  <version>0.0.1</version>
  <description>The robocon_bringup package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robocon_description</exec_depend>
  <exec_depend>robocon_gazebo</exec_depend>
  <exec_depend>robocon_application</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
